added validations